[package]
name = "orbtk"
version = "0.3.1-alpha3"
authors = [
    "Florian Blasius <flovanpt@posteo.de>",
    "Jeremy Soller <jackpot51@gmail.com>"
]
description = "The Orbital Widget Toolkit"
documentation = "https://docs.rs/orbtk"
repository = "https://github.com/redox-os/orbtk"
readme = "README.md"
license = "MIT"
keywords = [
    "orbital",
    "redox",
    "ui",
]
edition = "2018"

build="build.rs"

[lib]
name = "orbtk"
path = "src/lib.rs"

[profile.dev]
opt-level = 1

[dependencies]
orbtk-proc-macros = { version = "0.3.1-alpha3", path = "crates/proc-macros" }
orbtk-api = { version = "0.3.1-alpha3", path = "crates/api" }
orbtk-css-engine = { version = "0.3.1-alpha3", path = "crates/css-engine" }
orbtk-render = { version = "0.3.1-alpha3", path = "crates/render" }
orbtk-shell = { version = "0.3.1-alpha3", path = "crates/shell" }
orbtk-theme = { version = "0.3.1-alpha3", path="crates/theme" }
orbtk-utils = { version = "0.3.1-alpha3", path = "crates/utils" }
orbtk-tree = { version = "0.3.1-alpha3", path="crates/tree" }
orbtk-widgets = { version = "0.3.1-alpha3", path="crates/widgets" }
dces = { git = "https://gitlab.redox-os.org/redox-os/dces-rust.git",  branch = "develop" }
simple_excel_writer = "0.1.7"
calamine = "0.16.1"
tonic = "0.3"
prost = "0.6"
tokio = { version = "0.2", features = ["macros"] }
libc = "0.2.77"
libloading = "0.6.3"

[dev-dependencies]
euc = "0.5.0"
vek = "0.10.2"
serde = "1.0.106"
serde_derive = "1.0.106"

[build-dependencies]
tonic-build = "0.3.0"

# [target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "redox")))'.dev-dependencies]
# wgpu = "0.5.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["errhandlingapi","impl-default","winuser","wingdi","windef","minwindef"] }

[features]
debug = ["orbtk-api/debug"]
pathfinder = ["orbtk-shell/pfinder", "orbtk-render/pfinder"]
log = ["orbtk-shell/log"]
 
[workspace]
members = [
    "crates/utils",
    "crates/tree",
    "crates/proc-macros",
    "crates/api",
    "crates/css-engine", 
    "crates/render",
    "crates/shell",
    "crates/theme",
    "crates/widgets",
]

[[bin]]
name = "bin1"
path = "src/bin/my/main.rs"
[[bin]]
name = "bin2"
path = "src/bin/alg/main.rs"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "helloworld-server"
path = "src/bin/test/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "helloworld-client"
path = "src/bin/test/client.rs"